[gd_scene load_steps=3 format=3 uid="uid://c51jd628bsgy1"]

[ext_resource type="Script" uid="uid://si157wdql37t" path="res://script/boydorm_2_nd.gd" id="1_8ctb1"]
[ext_resource type="Texture2D" uid="uid://i2sm20iu0yki" path="res://Assets/background_images/Gemini_Generated_Image_wdmkf8wdmkf8wdmk.png" id="2_dm6ig"]

[node name="Boydorm2Nd" type="Node2D"]
script = ExtResource("1_8ctb1")

[node name="GeminiGeneratedImageWdmkf8Wdmkf8Wdmk" type="Sprite2D" parent="."]
position = Vector2(608.25, 350)
scale = Vector2(0.9140625, 0.9140625)
texture = ExtResource("2_dm6ig")

[node name="erik" type="TextureButton" parent="."]
offset_left = 56.085346
offset_top = 3.7797623
offset_right = 144.78424
offset_bottom = 213.27954
rotation = 0.013472871

[node name="Label" type="Label" parent="erik"]
layout_mode = 0
offset_left = 27.29241
offset_top = 27.855072
offset_right = 123.44724
offset_bottom = 70.75911
rotation = 0.26595277
text = "Erik"

[node name="myroom" type="TextureButton" parent="."]
offset_left = 226.0
offset_top = 31.999996
offset_right = 326.82504
offset_bottom = 293.62073
rotation = 0.013472871

[node name="Label" type="Label" parent="myroom"]
layout_mode = 0
offset_left = 17.779877
offset_top = 57.76571
offset_right = 113.93471
offset_bottom = 80.76571
rotation = 0.26595277
text = "Your Room"

[node name="downfloor2" type="TextureButton" parent="."]
offset_left = -288.33325
offset_top = 588.11835
offset_right = 120.893616
offset_bottom = 1156.904
rotation = -1.1380707

[node name="Button" type="Button" parent="."]
offset_left = 522.0
offset_top = 560.0
offset_right = 732.7742
offset_bottom = 614.0
text = "Leave Building"

[connection signal="pressed" from="erik" to="." method="_on_erik_pressed"]
[connection signal="pressed" from="myroom" to="." method="_on_myroom_pressed"]
[connection signal="pressed" from="downfloor2" to="." method="_on_downfloor_2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
